--- a/templates/index.html
+++ b/templates/index.html
@@ -102,12 +102,13 @@
                                 <div class="post__description">
                                     <span>
                                         <a class="post__name--underline" href="#"><b>{{post.user.username}}</b></a>
-                                        {{post.caption}}
-
+                                        <br/>
+                                        <span>{{post.caption}}</span>
                                     </span>
                                 </div>
-                                <p style="font-size: 13px;">{% for tag in post.tags.all %}
-                                    <a href="{{ tag.get_absolute_url }}" style="text-decoration: none;">
+                                <p style="font-size: 13px;">
+                                    {% for tag in post.tag.all %}
+                                    <a href="" style="text-decoration: none;">
                                         #{{ tag }}
                                     </a>
                                     {% endfor %}
