--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -26,9 +26,7 @@
           <div class="logo">
             <h3 style="padding: 20px; font-size: 20px;">Create New Post</h3>
           </div>
-          {{form.picture}} <br>
-          {{form.caption}} <br>
-          {{form.tags}} <br>
+          {{form| crispy}}
           <button class="form-btn" type="submit">Post</button>
           
         </form>
