get tag absolute urls

--- a/templates/index.html
+++ b/templates/index.html
@@ -130,7 +130,7 @@
                             </div>
                             <p style="font-size: 13px;">
                                 {% for tag in post.tag.all %}
-                                <a href="" style="text-decoration: none;">
+                                <a href="{{ tag.get_absolute_url }}" style="text-decoration: none;">
                                     #{{ tag }}
                                 </a>
                                 {% endfor %}
