add like url to post details

--- a/templates/postdetail.html
+++ b/templates/postdetail.html
@@ -78,7 +78,7 @@
                     <div class="post__footer">
                         <div class="post__buttons">
 
-                            <a href="" class="post__button">
+                            <a href="{% url 'like' post.id %}" class="post__button">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
