--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
                                         fill="var(--text-dark)" stroke="var(--text-dark)" stroke-width="0.7" />
                                 </svg>
                             </a>
-                            <!--Dm button-->
+                            <!--Share button-->
                             <button class="post__button">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
