--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
 <!DOCTYPE html>
@@ -12,8 +13,9 @@
   <title>Instagram | Register</title>
 </head>
 
-<body>
+{% block content %}
 
+<body>
   <div id="wrapper">
     <div class="container">
       <div class="phone-app-demo"></div>
@@ -23,13 +25,14 @@
           <div class="logo">
             <img src="{% static 'assets2/images/logo.png' %}" alt="logo">
           </div>
-          
-          {{form.username}}
-          {{form.email}}
-          {{form.password1}}
-          {{form.password2}}
+          <fieldset class="form-group">
+            <legend class="border-botton mb-4">
+              Sign up to see photos and videos from your friends.
+            </legend>
+            {{form | crispy }}
+          </fieldset>
 
-          <button class="form-btn" type="submit">Log in</button>
+          <button class="form-btn" type="submit">Sign Up</button>
 
 
           <span class="has-separator">Or</span>
@@ -39,7 +42,8 @@
           <a class="password-reset" href="#">Forgot password?</a>
         </form>
         <div class="sign-up">
-          Don't have an account? <a href="{% url 'register' %}">Sign In</a>
+          Already have an account? 
+          <a href="">Sign In</a>
         </div>
         <div class="get-the-app">
           <span>Get the app.</span>
@@ -55,5 +59,6 @@
   </div>
 
 </body>
+{% endblock content %}
 
 </html>
