flash message in main tag

--- a/templates/base.html
+++ b/templates/base.html
@@ -155,23 +155,22 @@
             </div>
         </nav>
     </header>
-
-    {% if messages %}
+    
+        {% if messages %}
         {% for message in messages %}
-            <div class="alert alert-{{message.tags}}">
-                {{ message }}
-            </div>
+        <main class="container mt-5"></main>
+        <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+        </div>
+        </main>
         {% endfor %}
-    {% endif %}
+        {% endif %}
+    
 
     {% block content %}
+
     {% endblock content %}
 
-
-
-    </section>
-    </section>
-    </main>
 
     <nav class="navbar">
         <a href="#" class="navbar__button">
@@ -226,6 +225,7 @@
         </a>
     </nav>
 </body>
+
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
     integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
     crossorigin="anonymous"></script>
