--- a/users/templates/sign-up.html
+++ b/users/templates/sign-up.html
@@ -1,5 +1,5 @@
 {% load static %}
-{% load crispy_forms_tags %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -16,24 +16,23 @@
 
   <div id="wrapper">
     <div class="container">
+      <div class="phone-app-demo"></div>
       <div class="form-data">
         <form action="" method="POST">
           {% csrf_token %}
           <div class="logo">
             <img src="{% static 'assets2/images/logo.png' %}" alt="logo">
           </div>
-          <div style="color: rgba(var(--f52,142,142,142),1); font-size: 17px; font-weight: 600;  margin: 0 0px 20px; text-align: center;">
-              Sign up to see photos and <br/>
-              videos from your friends.
-          </div>
+          <!-- <input type="text" placeholder="Phone number, username, or email"> -->
+          <!-- <input type="password" placeholder="Password"> -->
           {{form.username}}
           {{form.email}}
           {{form.password1}}
           {{form.password2}}
-
           <button class="form-btn" type="submit">Log in</button>
 
 
+          <!-- <a href="index.html" class="form-btn" type="submit">Log in</a> -->
           <span class="has-separator">Or</span>
           <a class="facebook-login" href="#">
             <i class="fab fa-facebook-square"></i> Log in with Facebook
@@ -41,7 +40,7 @@
           <a class="password-reset" href="#">Forgot password?</a>
         </form>
         <div class="sign-up">
-          Don't have an account? <a href="{% url 'register' %}">Sign In</a>
+          Don't have an account? <a href="{% url 'sign-in' %}">Sign In</a>
         </div>
         <div class="get-the-app">
           <span>Get the app.</span>
@@ -58,4 +57,4 @@
 
 </body>
 
-</html> 
+</html>
