--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -41,7 +41,7 @@
           <a class="password-reset" href="#">Forgot password?</a>
         </form>
         <div class="sign-up">
-          Don't have an account? <a href="{% url 'register' %}">Sign In</a>
+          Don't have an account? <a href="{% url 'login' %}">Sign In</a>
         </div>
         <div class="get-the-app">
           <span>Get the app.</span>
