add dummy users

--- a/templates/base.html
+++ b/templates/base.html
@@ -147,7 +147,7 @@
                         <div class="profile-button__border"></div>
                         <a href="">
                             <div class="profile-button__picture">
-                                <img src="{{request.user.profile.image.url}}" alt="User Picture">
+                                <img src="{% static 'assets/7.jpg' %}" alt="User Picture">
                             </div>
                         </a>
                     </button>
