add profile template

--- a/templates/index.html
+++ b/templates/index.html
@@ -315,7 +315,7 @@
                 </div>
             </div>
             <div>
-                <a class="side-menu__user-button">View Profile</a>
+                <a class="side-menu__user-button" href="{% url 'profile' %}">View Profile</a>
                 <a class="side-menu__user-button" href="{% url 'logout' %}" style="margin-left: 1em;">Logout</a>
             </div>
 
