--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                 </div>
             </form>
             <div class="header__buttons header__buttons--mobile">
-                <a href="">
+                <a href="{% url 'newpost'%}">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect x="3" y="3" width="18" height="18" rx="5" stroke="var(--text-dark)" stroke-width="1.8" />
                         <line x1="12.1" y1="6.9" x2="12.1" y2="17.1" stroke="var(--text-dark)" stroke-width="1.8"
@@ -82,7 +82,7 @@
             </div>
 
             <div class="header__buttons header__buttons--desktop">
-                <a href="">
+                <a href="{% url 'newpost'%}">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect x="3" y="3" width="18" height="18" rx="5" stroke="var(--text-dark)" stroke-width="1.8" />
                         <line x1="12.1" y1="6.9" x2="12.1" y2="17.1" stroke="var(--text-dark)" stroke-width="1.8"
@@ -91,14 +91,14 @@
                             stroke-linecap="round" />
                     </svg>
                 </a>
-                <a href="">
+                <a href="{% url 'index'%}">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M2.45307 11.751L11.9773 2.02175L21.5015 11.751C21.7906 12.0463 21.9545 12.4468 21.9545 12.8711V20.4556C21.9545 20.7747 21.7037 21 21.4427 21H15.964C15.713 21 15.4721 20.7849 15.4721 20.476V15.8886C15.4721 13.9497 13.9267 12.34 11.9773 12.34C10.0279 12.34 8.48244 13.9497 8.48244 15.8886V20.476C8.48244 20.7849 8.24157 21 7.99053 21H2.51187C2.25085 21 2 20.7747 2 20.4556V12.8711C2 12.4468 2.16397 12.0463 2.45307 11.751Z"
                             stroke="var(--text-dark)" stroke-width="2" />
                     </svg>
                 </a>
-                <a href="{">
+                <a href="#">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M5.81038 19.7478C5.83176 19.4539 5.70787 19.1681 5.47873 18.9827C3.2792 17.2037 1.9 14.5525 1.9 11.5868C1.9 6.27627 6.38748 1.9 12.0098 1.9C17.6196 1.9 22.1078 6.27565 22.1078 11.5868C22.1078 16.8966 17.6092 21.2735 11.998 21.2735C11.0656 21.2735 10.1798 21.1544 9.32697 20.9277C9.15685 20.8825 8.97721 20.8882 8.81028 20.944L5.64643 22.0022L5.81038 19.7478Z"
@@ -138,10 +138,10 @@
                     </a>
                 </span>
 
-                <a href="">
+                <a href="{% url 'profile' %}">
                     <button class="profile-button">
                         <div class="profile-button__border"></div>
-                        <a href="">
+                        <a href="{% url 'profile' %}">
                             <div class="profile-button__picture">
                                 <img src="{% static 'assets/7.jpg' %}" alt="User Picture">
                             </div>
@@ -216,7 +216,7 @@
         <a href="" class="navbar__button profile-button">
             <div class="profile-button__border"></div>
             <div class="profile-button__picture">
-                <img src="{{request.user.profile.image.url}}" alt="User Picture">
+                <img src="{% static 'assets/7.jpg' %}" alt="User Picture">
             </div>
         </a>
     </nav>
