--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -11,8 +11,6 @@ Page content START -->
 <section style="margin-top: 10em;">
 	<div class="container">
 		<div class="row g-0 g-lg-5">
-			<h1>{{user.username}}</h1>
-			<img src="{{user.profile.image.url}}">
 			<!-- Left sidebar START -->
 			<div class="col-lg-4">
 				<div class="row">
@@ -21,10 +19,12 @@ Page content START -->
 						<div class="card shadow p-2 mb-4 text-center">
 							<div class="rounded-3">
 								<!-- Image -->
-								{% if not profile.image.url %}
+								{% if not user.profile.image.url %}
 								<a href="" class="btn" style="background:linear-gradient(230deg, rgb(255, 0, 157)  0%, rgb(111, 0, 255) 100%), url(assets/img/tag-light.png) no-repeat; color: white;" >Update Profile</a>
 								{% else %}
-								<a href="{{ user.profile.image.url }}"><img src="{{ user.profile.image.url }}" class="card-img" alt="course image"></a>
+								<a href="">
+									<img src="{{ user.profile.image.url }}" class="card-img" alt="course image">
+								</a>
 								{% endif %}
 							</div>
 						</div>
