--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -3,105 +3,56 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-      
-<!-- **************** MAIN CONTENT START **************** -->
-<main>
-<!-- =======================
-Page content START -->
-<section style="margin-top: 10em;">
-	<div class="container">
-		<div class="row g-0 g-lg-5">
-			<!-- Left sidebar START -->
-			<div class="col-lg-4">
-				<div class="row">
-					<div class="col-md-6 col-lg-12">
-						<!-- Instructor image START -->
-						<div class="card shadow p-2 mb-4 text-center">
-							<div class="rounded-3">
-								<!-- Image -->
-								{% if not user.profile.image.url %}
-								<a href="" class="btn" style="background:linear-gradient(230deg, rgb(255, 0, 157)  0%, rgb(111, 0, 255) 100%), url(assets/img/tag-light.png) no-repeat; color: white;" >Update Profile</a>
-								{% else %}
-								<a href="">
-									<img src="{{ user.profile.image.url }}" class="card-img" alt="course image">
-								</a>
-								{% endif %}
-							</div>
+
+<div id="wrapper" style="margin-right: auto; margin-left: auto;">
+	<main class="main-container">
+		<section class="content-container">
+			<div class="content">
+				<div class="content-section">
+					<div class="row">
+						<div class="col-6">
+							<img class="rounded-circle account-img" src="{{ user.profile.image.url }}"
+							style="height: 100px; width: 100px;  align-self: center;">
+
+						</div>
+						<div class="media-body col-4">
+							<h2 class="account-heading text-center">{{ user.username }}</h2>
+							<p class="text-secondary text-center">{{ user.email }}</p>
 						</div>
 					</div>
-				</div> 
-				<!-- Row End -->
-			</div>
-			<!-- Left sidebar END -->
-				
-			<!-- Main content START -->
-			<div class="col-lg-8">
-			
-				<!-- Title -->
-                {% if profile.first_name  %}
-					<h5 class="mb-0">Hi, I am</h5>
-                {% else %}
-					<h5 class="mb-0">Hi, {{request.user|title}}, you need to <a href="" style="color: rgb(0, 119, 255);">update </a> your profile for more features and details</h5>
-                {% endif %}
-				<h1 class="mb-0">{{ profile.first_name }} {{ profile.last_name }}</h1>
-				<p>{{ profile.bio }}</p>
-				<!-- Content -->
-				<p class="mt-4">{{ profile.bio }}</p>
-				<!-- Personal info -->
-				<ul class="list-group list-group-borderless">
-					<li class="list-group-item px-0">
-						<span class="h6 fw-light"><i class="fas fa-fw fa-map-marker-alt text-primary me-1 me-sm-3"></i>Address:</span>
-						<span>{{ profile.location }}</span>
-					</li>
-					<li class="list-group-item px-0">
-						<span class="h6 fw-light"><i class="fas fa-fw fa-envelope text-primary me-1 me-sm-3"></i>Email:</span>
-						<span>{{ profile.email }}</span>
-					</li>
-					<li class="list-group-item px-0">
-						<span class="h6 fw-light"><i class="fas fa-fw fa-headphones text-primary me-1 me-sm-3"></i>Phone number:</span>
-						<span>{{ profile.phone }}</span>
-					</li>
-					<li class="list-group-item px-0">
-						<span class="h6 fw-light"><i class="fas fa-fw fa-globe text-primary me-1 me-sm-3"></i>Website:</span>
-						<span><a href="">{{ profile.website }}</a></span>
-					</li>
-					{% if profile.portfolio_status == True %}
-					<li class="list-group-item px-0">
-						<span class="h6 fw-light"><i class="fas fa-fw fa-briefcase text-primary me-1 me-sm-3"></i>Portfolio:</span>
-						<span><a href="{% url 'portfolio' profile.user  %}">View My Portfolio</a></span>
-					</li>
-					{% endif %}
-					{% if user.is_authenticated and user == profile.user and profile.portfolio_status == True %}
-                    <li class="list-group-item px-0">
-						<span class="h6 fw-light"><i class="fas fa-fw fa-paint-brush text-primary me-1 me-sm-3"></i>Upate Portfolio:</span>
-						<span><a href="{% url 'portfolio-update' request.user  %}">Edit Your Portfolio</a></span>
-					</li>
-                    {% endif %}
-				</ul>
-				
-				<!-- Counter START -->
-				
-					<div class="card-body px-3">
-						
-						<ul class="list-inline mb-0">
-						<li class="list-inline-item"> <a class="btn px-2 btn-sm bg-facebook" href=""><i class="fab fa-fw fa-facebook-f"></i></a> </li>
-						<li class="list-inline-item"> <a class="btn px-2 btn-sm bg-instagram-gradient" href=""><i class="fab fa-fw fa-instagram"></i></a> </li>
-						<li class="list-inline-item"> <a class="btn px-2 btn-sm bg-twitter" href=""><i class="fab fa-fw fa-twitter"></i></a> </li>
-						<li class="list-inline-item"> <a class="btn px-2 btn-sm bg-linkedin" href=""><i class="fab fa-fw fa-linkedin-in"></i></a> </li>
-						</ul>
-						{% if profile.user != request.user %}
-						<a href="" class="btn btn-success">Send Message</a>
-						{% endif %}
+					<div class="row">
+						<div class="col-4">
+							<span class="text-center">0</span><br/>
+							Posts 
+						</div>
+						<div class="col-4">
+							<span class="text-center">0</span><br/>
+							Followers 
+						</div>
+						<div class="col-4">
+							<span class="text-center">0</span><br/>
+							Following 
+						</div>
 					</div>
-				
-				<div class="card-body px-3">
-						
+					<!-- FORM HERE -->
+					<form method="POST" enctype="multipart/form-data">
+						{% csrf_token %}
+						<fieldset class="form-group">
+							<legend class="border-bottom mb-4">Profile Info</legend>
+							{{ u_form|crispy }}
+							{{ p_form|crispy }}
+						</fieldset>
+						<div class="form-group">
+							<button class="btn btn-outline-info" type="submit">Update</button>
+						</div>
+					</form>
 				</div>
-				
-				<br><br>
-            </div>
-			
-		</div>
-	</div>
-</section>
+			</div>
+		</section>
+	</main>
+	
+</div>
+
+
+
 {% endblock content %}
